--- a/index.html
+++ b/index.html
@@ -411,7 +411,8 @@
 			width: 50px;
 			height: 50px;
 			margin-right: 20px;
-			background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 24'%3E%3Cpath d='M20 0H3C1.3 0 0 1.3 0 3v18c0 1.7 1.3 3 3 3h17V4h-4v8l-2-2-2 2V4H3.5c-1.4 0-1.4-2 0-2H20V0z' fill='%23222'/%3E%3C/svg%3E");
+			background-image:
+				url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 24'%3E%3Cpath d='M20 0H3C1.3 0 0 1.3 0 3v18c0 1.7 1.3 3 3 3h17V4h-4v8l-2-2-2 2V4H3.5c-1.4 0-1.4-2 0-2H20V0z' fill='%23777'/%3E%3C/svg%3E");
 			-webkit-background-size: contain;
 			background-size: contain;
 			background-repeat: no-repeat;
