--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 		.header .name span {
 			font-size: 30px;
 			font-weight: normal;
-			color: #222;
+			color: #676b76;
 			line-height: 50px;
 			text-transform: uppercase;
 		}
@@ -195,7 +195,7 @@
 			width: 40px;
 			height: 40px;
 			background-color: transparent;
-			background-image:	url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 328.863 328.863'%3E%3Cpath d='M104.032 220.434V131.15h-20.64v-22.88h49.121v112.164h-28.481zm135.52-83.204c0 9.76-5.28 18.4-14.08 23.201 12.319 5.119 20 15.84 20 28.32 0 20.16-17.921 32.961-45.921 32.961-28.001 0-45.921-12.641-45.921-32.48 0-12.801 8.32-23.682 21.28-28.801-9.44-5.281-15.52-14.24-15.52-24 0-17.922 15.681-29.281 40.001-29.281 24.64 0 40.161 11.68 40.161 30.08zm-59.042 49.122c0 9.441 6.721 14.721 19.041 14.721s19.2-5.119 19.2-14.721c0-9.279-6.88-14.561-19.2-14.561-12.321 0-19.041 5.281-19.041 14.561zm2.881-47.522c0 8.002 5.76 12.48 16.16 12.48s16.16-4.479 16.16-12.48c0-8.318-5.76-12.959-16.16-12.959-10.401 0-16.16 4.641-16.16 12.959z' fill='%23222'/%3E%3Cpath d='M292.864 120.932c4.735 13.975 7.137 28.592 7.137 43.5 0 74.752-60.816 135.568-135.569 135.568s-135.57-60.816-135.57-135.568c0-74.754 60.816-135.568 135.569-135.568 14.91 0 29.527 2.4 43.5 7.137V5.832C193.817 1.963 179.24 0 164.432 0 73.765 0 .001 73.764.001 164.432s73.764 164.432 164.431 164.432 164.43-73.764 164.43-164.432c0-14.807-1.962-29.385-5.831-43.5h-30.167z' fill='%23222'/%3E%3Cpath d='M284.659 44.111V12.582h-22.672v31.529h-31.34v22.67h31.34v31.528h22.672V66.781h31.527v-22.67z' fill='%23222'/%3E%3C/svg%3E%0A");
+			background-image:	url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 328.863 328.863'%3E%3Cpath d='M104.032 220.434V131.15h-20.64v-22.88h49.121v112.164h-28.481zm135.52-83.204c0 9.76-5.28 18.4-14.08 23.201 12.319 5.119 20 15.84 20 28.32 0 20.16-17.921 32.961-45.921 32.961-28.001 0-45.921-12.641-45.921-32.48 0-12.801 8.32-23.682 21.28-28.801-9.44-5.281-15.52-14.24-15.52-24 0-17.922 15.681-29.281 40.001-29.281 24.64 0 40.161 11.68 40.161 30.08zm-59.042 49.122c0 9.441 6.721 14.721 19.041 14.721s19.2-5.119 19.2-14.721c0-9.279-6.88-14.561-19.2-14.561-12.321 0-19.041 5.281-19.041 14.561zm2.881-47.522c0 8.002 5.76 12.48 16.16 12.48s16.16-4.479 16.16-12.48c0-8.318-5.76-12.959-16.16-12.959-10.401 0-16.16 4.641-16.16 12.959z' fill='%23676b76'/%3E%3Cpath d='M292.864 120.932c4.735 13.975 7.137 28.592 7.137 43.5 0 74.752-60.816 135.568-135.569 135.568s-135.57-60.816-135.57-135.568c0-74.754 60.816-135.568 135.569-135.568 14.91 0 29.527 2.4 43.5 7.137V5.832C193.817 1.963 179.24 0 164.432 0 73.765 0 .001 73.764.001 164.432s73.764 164.432 164.431 164.432 164.43-73.764 164.43-164.432c0-14.807-1.962-29.385-5.831-43.5h-30.167z' fill='%23676b76'/%3E%3Cpath d='M284.659 44.111V12.582h-22.672v31.529h-31.34v22.67h31.34v31.528h22.672V66.781h31.527v-22.67z' fill='%23676b76'/%3E%3C/svg%3E%0A");
 			-webkit-background-size: 30px;
 			background-size: 30px;
 			background-position: center;
@@ -236,8 +236,8 @@
 			font-size: 16px;
 			font-weight: 300;
 			line-height: 32px;
-			color: #222;
-			border: 1px solid #222;
+			color: #676b76;
+			border: 1px solid #676b76;
 			border-right: none;
 			-webkit-border-radius: 5px 0 0 5px;
 			border-radius: 5px 0 0 5px;
@@ -257,7 +257,7 @@
 			border: none;
 			-webkit-border-radius: 0 5px 5px 0;
 			border-radius: 0 5px 5px 0;
-			background-color: #222;
+			background-color: #676b76;
 			vertical-align: top;
 		}
 
@@ -284,6 +284,7 @@
 		.menu ul li {
 			display: table-cell;
 			padding: 8px 0;
+			color: #676b76;
 			text-align: center;
 		}
 
@@ -304,6 +305,7 @@
 			padding: 10px;
 			font-size: 20px;
 			font-weight: bold;
+			color: #676b76;
 		}
 
 		@media screen and (max-height: 530px) {
@@ -335,9 +337,13 @@
 		.selects-wrapper .select {
 			position: relative;
 			padding: 5px 10px;
-			border: 1px solid #222;
+			border: 1px solid #676b76;
 			-webkit-border-radius: 5px;
 			border-radius: 5px;
+		}
+
+		.selects-wrapper .select span {
+			color: #676b76;
 		}
 
 		.selects-wrapper .select + .select {
@@ -353,7 +359,7 @@
 			transform: translateY(-50%) rotate(180deg);
 			width: 10px;
 			height: 10px;
-			background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24'%3E%3Cpath d='M24 22H0L12 2z' fill='%23222'/%3E%3C/svg%3E");
+			background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24'%3E%3Cpath d='M24 22H0L12 2z' fill='%23676b76'/%3E%3C/svg%3E");
 			-webkit-background-size: contain;
 			background-size: contain;
 			background-repeat: no-repeat;
@@ -411,8 +417,7 @@
 			width: 50px;
 			height: 50px;
 			margin-right: 20px;
-			background-image:
-				url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 24'%3E%3Cpath d='M20 0H3C1.3 0 0 1.3 0 3v18c0 1.7 1.3 3 3 3h17V4h-4v8l-2-2-2 2V4H3.5c-1.4 0-1.4-2 0-2H20V0z' fill='%23777'/%3E%3C/svg%3E");
+			background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 24'%3E%3Cpath d='M20 0H3C1.3 0 0 1.3 0 3v18c0 1.7 1.3 3 3 3h17V4h-4v8l-2-2-2 2V4H3.5c-1.4 0-1.4-2 0-2H20V0z' fill='%23777'/%3E%3C/svg%3E");
 			-webkit-background-size: contain;
 			background-size: contain;
 			background-repeat: no-repeat;
@@ -489,6 +494,7 @@
 
 		.books .readers {
 			font-size: 16px;
+			color: #676b76;
 		}
 
 		@media screen and (max-height: 720px) {
@@ -532,7 +538,7 @@
 			height: 20vh;
 			text-decoration: none;
 			text-align: center;
-			background-color: #f00;
+			background-color: #00a33a;
 			border: none;
 		}
 
