--- a/index.html
+++ b/index.html
@@ -498,13 +498,13 @@
 		}
 
 		@media screen and (max-height: 720px) {
-			.books .inner li:nth-child(2) {
+			.books .inner > li:nth-child(2) {
 				display: none;
 			}
 		}
 
 		@media screen and (max-height: 580px) {
-			.books .inner li:nth-child(3) {
+			.books .inner > li:nth-child(3) {
 				display: none;
 			}
 		}
